[package]
name = "mbc"
version = "0.1.0"
edition = "2021"
default-run = "main"
license = "MIT"
release = false

[lint]
workspace = true

[package.metadata.release]
release = false

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[lib]
name = "mbc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
async-trait = "0.1"
sha2 = "0.10.8"
chrono = "0.4.31"
anyhow = "*"
hex = "0.4.3"
once_cell = "1.5"
log = "0.4"
rand = "0.8"
ring = "0.17.7"
tracing = "0.1.37"
futures = "*"
futures-timer = "*"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.libp2p]
version = "0.53.2"
features = [
    "noise",
    "dcutr",
    "pnet",
    "dns",
    "yamux",
    "dns",
    "tokio",
    "macros",
    "kad",
    "ping",
    "websocket",
    "relay",
    "cbor",
    "mdns", 
    "floodsub", 
    "gossipsub", 
    "quic",
    "serde",
    "upnp",
    "autonat",
    "json",
    "ed25519",
    "metrics",
    "uds",
    "rsa",
    "plaintext",
    "request-response",
    "identify", 
    "rendezvous",
    "tcp", 
    "tls"
]

[dependencies.tokio]
version = "1.12.0"
features = [
    "io-util", 
    "io-std", 
    "macros", 
    "signal",
    "net",
    "rt", 
    "sync", 
    "time", 
    "rt-multi-thread",
    "full",
]
